<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTicketTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="20sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTicketDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="01/01/0001" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvTicketStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="8dp"
                    android:text="@string/status"
                    android:textSize="20sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvTicketStatusText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/raleway_medium"
                    android:paddingRight="8dp"
                    android:text="@string/status"
                    android:textSize="20sp" />
            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTicketDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="DescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescription" />

        </LinearLayout>


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTicketComments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_medium"
                android:layout_marginBottom="10dp"
                android:text="@string/comments"
                android:textSize="20sp" />

        <include
            layout="@layout/comments_detail"
            android:layout_width="match_parent"
            android:layout_height="516dp" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
